--- a/stegobmp/pom.xml
+++ b/stegobmp/pom.xml
@@ -141,21 +141,22 @@
           </execution>
         </executions>
         <configuration>
+          <filters>
+            <filter>
+              <artifact>*:*</artifact>
+              <excludes>
+                <exclude>META-INF/*.SF</exclude>
+                <exclude>META-INF/*.DSA</exclude>
+                <exclude>META-INF/*.RSA</exclude>
+              </excludes>
+            </filter>
+          </filters>
           <shadedArtifactAttached>true</shadedArtifactAttached>
           <transformers>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
               <mainClass>${main.class}</mainClass>
             </transformer>
           </transformers>
-          <!--                <artifactSet>
-                        <excludes>
-                          <exclude>junit:junit</exclude>
-                          <exclude>mockito:*</exclude>
-                          <exclude>hamcrest:*</exclude>
-                          <exclude>*:xml-apis</exclude>
-                          <exclude>org.apache.maven:lib:tests</exclude>
-                        </excludes>
-                      </artifactSet>-->
           <outputFile>${project.artifactId}.jar</outputFile>
         </configuration>
       </plugin>
@@ -201,6 +202,7 @@
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 </project>
